--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,8 @@
 
 <h2>My Heroes</h2>
 
-
-<my-heroes></my-heroes>
+<nav>
+  <a routerLink="/dashboard">Dashboard</a>
+  <a routerLink="/heroes">Heroes</a>
+</nav>
+<router-outlet></router-outlet>
